# tvmaze-rs

./: Cargo.toml  README.md
src/: api.rs  client.rs  episode.rs  lib.rs  main.rs  other.rs  people.rs  results.rs  show.rs
