[package]
name = "tvmaze-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http-cache-reqwest = "0.10.0"
reqwest = { version = "0.11.18", features = ["json"] }
reqwest-middleware = "0.2.2"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.29.1", features = ["full"] }
